test/invalid/slot_range.pks
// error: Slot::9 out of range (Slot ∈ 1..6)
goal bad {
    pc.deposit(Slot::9);
}
